Added time to compelte feature to models

--- a/materials/templates/materials/textbook.html
+++ b/materials/templates/materials/textbook.html
@@ -1,4 +1,4 @@
-{% extends 'courses/base.html' %}
+{% extends 'materials/base.html' %}
 {% block content %}
 <span class="overview">
 	<div class="row">
