--- a/materials/templates/materials/congratulations.html
+++ b/materials/templates/materials/congratulations.html
@@ -1,6 +1,6 @@
-{% extends 'courses/base.html' %}
+{% extends 'materials/base.html' %}
 {% block content %}
-	<h1>Congratulations! You completed lesson {{ section.lesson.lesson_order }} section {{ section.section_order }}: {{ section.name }}</h1>
-	<p><a href="{% url 'home' %}">Return home</a></p>
-	<p><a href="{% url 'courses:course_overview' section.course.id %}">Return to course overview</a></p>
+    <h1>Congratulations! You completed {{ page.title }}</h1>
+    <p><a href="{{ home_page.get_url }}">Return home</a></p>
+    <p><a href="{{ page.get_course }}">Return to course overview</a></p>
 {% endblock content %}
