--- a/materials/templates/materials/slideshow.html
+++ b/materials/templates/materials/slideshow.html
@@ -1,19 +1,39 @@
 {% block slideshow %}
 <div class="section-body" id="slideshow">
-
 	{% for slide in self.get_children.specific %}
         <div class="slide">
             <div class="slide-content">
                 {{ slide.body|safe }}
             </div>
-        <p class="slide-counter">{{ forloop.counter }}/{{ self.get_children.count }}</p> 
+            <p class="slide-counter">{{ forloop.counter }}/{{ self.get_children.count }}</p> 
         </div>
+        {% if forloop.counter == self.get_children.count %}                                     
+            <div id="final-slide">                                                       
+                {% if is_complete %}                                                     
+                    <p>section has been marked as complete!</p>                          
+                    <p><a href = "{{ self.specific.get_course }}">return home</a></p>          
+                    {% if self.get_next_sibling is None %}                                     
+                        <p>this is the final section of this lesson</p>                      
+                    {% else %}                                                           
+                    <p><a href="{{ self.get_next_sibling }}">Continue to next section</a></p>                    
+                    {% endif %}                                                          
+                {% else %}                                                               
+                    <p style="text-align: center;">                                      
+                        <form method="post">                                             
+                        {% csrf_token %}                                                 
+                        <button type="submit">mark section as complete</button>          
+                    </p>                                                                 
+                {% endif %}                                                              
+                </div>                                                                       
+            {% else %}
+                </div>                                                                       
+            {% endif %}                                                                  
+        </form>
     {% endfor %}
 
     <button id="prev" style="float: left;" onclick="plusSlides(-1)">&#10094;</button>
 	<button id="next" style="float: right;" onclick="plusSlides(1)">&#10095;</button>
 </div>
 {% endblock %}
-
 
 <!-- if forloop.counter == slides.count , display mark as complete button -->
