Continued to fix links in section page

--- a/materials/templates/materials/congratulations.html
+++ b/materials/templates/materials/congratulations.html
@@ -2,5 +2,5 @@
 {% block content %}
     <h1>Congratulations! You completed {{ page.title }}</h1>
     <p><a href="{{ home_page.get_url }}">Return home</a></p>
-    <p><a href="{{ page.get_course }}">Return to course overview</a></p>
+    <p><a href="{{ textbook.get_url }}">Return to course overview</a></p>
 {% endblock content %}
