--- a/materials/templates/materials/section.html
+++ b/materials/templates/materials/section.html
@@ -45,7 +45,7 @@
 				<h1><span style="font-size: 2rem; font-weight: 400;"></span></h1>
 				<p><span style="font-weight: 600;">Exit to: &nbsp;</span>
                 <a href="{{ home_page.get_url }}">Home</a> &nbsp;
-                    <a href="{{ page.specific.get_course.get_url }}">Course Overview</a>
+                    <a href="{{ page.specific.course.get_url }}">Course Overview</a>
 				</p>
 				<div style="vertical-align: bottom;" id="lesson-interactive">
 					<div class="tab-content" id="tabContent">
