--- a/materials/templates/materials/slideshow.html
+++ b/materials/templates/materials/slideshow.html
@@ -19,7 +19,7 @@
                     {% endif %}                                                          
                 {% else %}                                                               
                     <p style="text-align: center;">                                      
-                        <form method="post">                                             
+                        <form method="POST">                                             
                         {% csrf_token %}                                                 
                         <button type="submit">mark section as complete</button>          
                     </p>                                                                 
