Updated readme and auth for homepage.

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 	<div class="col-lg-12 announcements">
-		<p>{{ announcement.text|safe }}</p>
+		<p>{{ announcement.text }}</p>
 	</div>
 	<div class="row" id="home-feature-links">
 		<div class="col-lg-6">
