--- a/materials/templates/materials/base.html
+++ b/materials/templates/materials/base.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		<nav class="navbar navbar-expand">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="">Learning Platform</a>
+                <a class="navbar-brand" href="{{ home_page.get_url }}">Learning Platform</a>
 				<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 					<li class="nav-item">
 						<a class="nav-link" href=""><i class="bi bi-people-fill"><span class="icon-label">community</span></i></a>
