Slides are basically working, but need styles.

--- a/materials/templates/materials/base.html
+++ b/materials/templates/materials/base.html
@@ -4,6 +4,7 @@
 <head>
 
     {% include 'materials/css_include.html' %}
+    {% include 'materials/js_include.html' %}
     <script type="text/javascript" src="{% static 'materials/bootstrap/js/bootstrap.bundle.min.js' %}"></script> 
 	<!-- Required meta tags -->
     <meta charset="utf-8">
